# log-simulator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_QUICKSTART.md  CI_CD_SETUP.md  CLAUDE.md  CLOUD_RUN_DEPLOY.md  Dockerfile  GEMINI.md  LICENSE  MODEL.md  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: deploy-cloudrun.yml  test.yml
docker/: README.md
docs/: API.md  ATOMIC_RED_TEAM_INTEGRATION.md  BRANCH_PROTECTION.md  SAMPLE_LOG_RESOURCES.md  VERIFICATION_TEST.md
examples/: correlation_scenarios.py  generate_cloudtrail.py  generate_crowdstrike.py  generate_google_workspace.py  generate_google_workspace_admin.py  generate_google_workspace_drive.py  test_workspace_schemas.py
scripts/: batch_generate.py  deploy-cloudrun.sh  install-gcloud.sh  monitor-costs.sh  setup-budget-alert.sh
src/log_simulator/: __init__.py  cli.py
src/log_simulator/api/: __init__.py  config.py  main.py
src/log_simulator/api/middleware/: rate_limit.py
src/log_simulator/api/models/: __init__.py  requests.py  responses.py
src/log_simulator/api/routes/: __init__.py  generate.py  health.py  schemas.py
src/log_simulator/api/static/: index.html
src/log_simulator/api/static/css/: styles.css
src/log_simulator/api/static/js/: app.js
src/log_simulator/generators/: schema_generator.py  template_generator.py
src/log_simulator/generators/fields/: base.py  cloud.py  identity.py  network.py  system.py
src/log_simulator/models/: schema.py
src/log_simulator/schemas/cloud_identity/: azure_ad_signin.yaml  google_workspace.yaml  office365_audit.yaml
src/log_simulator/schemas/cloud_identity/google_workspace/: README.md  admin.yaml  calendar.yaml  chat.yaml  drive.yaml  gmail.yaml  login.yaml  meet.yaml  token.yaml
src/log_simulator/schemas/cloud_infrastructure/: aws_cloudtrail.yaml  gcp_audit.yaml
src/log_simulator/schemas/security/: crowdstrike_fdr.yaml  sysmon.yaml
src/log_simulator/schemas/web_servers/: apache_access.yaml  nginx_access.yaml
src/log_simulator/utils/: field_generators.py
tests/api/: conftest.py  test_generate.py  test_health.py  test_schemas.py
tests/cli/: conftest.py  test_cli_basic.py
tests/integration/: test_e2e_scenarios.py
tests/unit/: test_field_generators.py  test_google_workspace_schemas.py  test_schema_generator.py  test_template_generator.py
