[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-simulator"
version = "0.1.0"
description = "Generate simulated logs and mock up endpoints for testing, development, and security research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mlucn"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["logging", "simulation", "testing", "siem", "security", "log-generation"]

dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.5",
    "safety>=3.0.0",
]

api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.6",
]

all = [
    "log-simulator[dev,api]",
]

[project.urls]
Homepage = "https://github.com/mlucn/log-simulator"
Repository = "https://github.com/mlucn/log-simulator"
Issues = "https://github.com/mlucn/log-simulator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # use of assert (acceptable in tests)
    "S311",  # pseudo-random generators (acceptable for log simulation)
    "S104",  # binding to all interfaces (needed for Docker/API servers)
    "B008",  # function call in argument defaults (FastAPI Depends pattern)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "log_simulator.api.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]

[tool.bandit]
# Bandit configuration for security linting
exclude_dirs = [
    "tests/",
    ".venv/",
    "venv/",
    "build/",
    "dist/",
    "*.egg-info/",
]
skips = [
    "B101",  # assert_used - acceptable in tests
    "B311",  # random - acceptable for log simulation
    "B104",  # hardcoded_bind_all_interfaces - needed for Docker/API
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
